--- a/styly.css
+++ b/styly.css
@@ -274,6 +274,16 @@ nav ul li a:active {
     text-align: center;
 }
 
+.contact-form input[type="text"], .contact-form input[type="email"], textarea {
+    outline: none;
+}
+
+.contact-form input[type="text"]:focus, .contact-form input[type="email"]:focus, textarea:focus {
+    width: 700px;
+    border-color: #dc4f00;
+    transition: 0.5s;
+}
+
 .contact-form input {
     width: 80%;
     margin: 5px 0;
@@ -297,6 +307,7 @@ input[type="submit"] {
     background: #dc4f00;
     color: #fff;
     font-size: 20px;
+    cursor: pointer;
 }
 
 input[type="submit"]:hover {
